--- a/styles/_page.scss
+++ b/styles/_page.scss
@@ -21,3 +21,10 @@ body {
 header {
 	margin: 64px 0;
 }
+
+.box {
+	padding: 16px;
+	border: 2px solid $color-black;
+	border-radius: 5px;
+	box-shadow: 8px 8px 0 $color-black;
+}
