--- a/styles/_utilities.scss
+++ b/styles/_utilities.scss
@@ -3,6 +3,21 @@
 	margin-bottom: 80px;
 }
 
+.my40 {
+	margin-top: 40px;
+	margin-bottom: 40px;
+}
+
+.my24 {
+	margin-top: 24px;
+	margin-bottom: 24px;
+}
+
+.my16 {
+	margin-top: 16px;
+	margin-bottom: 16px;
+}
+
 .pink {
 	background: $color-pink;
 }
