--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -5,35 +5,6 @@
 /* Headings
    ========================================================================== */
 
-header h1 {
-	font-size: 18px;
-	font-weight: normal;
-	font-family: $font-family-mono;
-	margin: 0;
-}
-
-header hr {
-	border: 0;
-	border-top: 1px dashed $color-black;
-	border-bottom: 1px solid $color-black;
-	background-color: $color-white;
-	height: 4px;
-}
-
-h3, h4 {
-	margin-top: 0;
-	text-decoration: underline;
-	-webkit-text-decoration-style: wavy;
-	text-decoration-style: wavy;
-	-webkit-text-underline-position: under;
-	text-underline-position: under;
-	font-family: $font-family-mono;
-}
-
-.box h4 {
-	margin-top: 0;
-}
-
 /**
  * 1. Reset margins.
  * 2. Base headings typography settings.
@@ -77,6 +48,48 @@ h6 {
 	/* 2 */
 	font-size: $font-size-h6;
 	line-height: $line-height-h6;
+}
+
+header h1 {
+	font-size: 18px;
+	font-weight: normal;
+	font-family: $font-family-mono;
+	margin: 0;
+}
+
+header hr {
+	border: 0;
+	border-top: 1px dashed $color-black;
+	border-bottom: 1px solid $color-black;
+	background-color: $color-white;
+	height: 4px;
+}
+
+h3, h4 {
+	margin-top: 0;
+	text-decoration: underline;
+	-webkit-text-decoration-style: wavy;
+	text-decoration-style: wavy;
+	-webkit-text-underline-position: under;
+	text-underline-position: under;
+	font-family: $font-family-mono;
+	// background: $color-green;
+	// display: inline;
+	line-height: 1.6;
+
+	span {
+		background: $color-pink;
+	}
+}
+
+h3 {
+	margin-bottom: 40px;
+}
+
+.box h4 {
+	margin-top: 0;
+	margin-bottom: 0;
+	background: none;
 }
 
 
@@ -127,4 +140,24 @@ ul li + li {
 	ul, ol {
 		padding: 0; /* 2 */
 	}
+}
+
+blink {
+  animation: 1s linear infinite blink;
+	background: $color-pink;
+	padding: 0 2px;
+	text-decoration: none !important;
+	font-size: 0.9em;
+}
+
+@keyframes blink {
+  0% {
+      visibility: hidden;
+  }
+  50% {
+      visibility: hidden;
+  }
+  100% {
+      visibility: visible;
+  }
 }
